--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:tKqCVL1lo2qeASdbSYF0iQunCnGaAEh5OtXPU06LSwg=
+APP_KEY=base64:58LEGvT1bfaMnpOXfJVNNRhlBadZeFsUFI4tS8FjvhU=
 APP_DEBUG=true
-APP_URL=http://Insomnia.test
+APP_URL=http://Insomnia-Cine.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=insomnia
+DB_DATABASE=insomnia_cine
 DB_USERNAME=root
 DB_PASSWORD=
 
