Creacion Modelos de Relaciones y tablas faltantes

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ vendor/composer/autoload_files.php
 vendor/composer/autoload_psr4.php
 vendor/composer/autoload_static.php
 vendor/composer/platform_check.php
+vendor/composer/autoload_classmap.php
+vendor/composer/autoload_files.php
+vendor/composer/autoload_psr4.php
+vendor/composer/autoload_static.php
+vendor/composer/platform_check.php
